# oop_labs

lab_1/: CMakeLists.txt  main.cpp
lab_1/include/: vowel_count.h
lab_1/src/: vowel_count.cpp
lab_1/tests/: tests.cpp
lab_2/: CMakeLists.txt  main.cpp
lab_2/include/: four.h
lab_2/src/: four.cpp
lab_2/tests/: tests.cpp
lab_3/: CMakeLists.txt  main.cpp
lab_3/include/: FigureArray.h  octagon.h  polygon.h  square.h  triangle.h
lab_3/src/: FigureArray.cpp  octagon.cpp  polygon.cpp  square.cpp  triangle.cpp
lab_3/tests/: tests.cpp
lab_4/: CMakeLists.txt  main.cpp
lab_4/googletest/ci/: linux-presubmit.sh
lab_4/googletest/docs/: advanced.md  faq.md  gmock_cook_book.md  primer.md
lab_4/googletest/docs/reference/: testing.md
lab_4/googletest/googlemock/include/gmock/: gmock-actions.h  gmock-spec-builders.h
lab_4/googletest/googlemock/test/: gmock-actions_test.cc  gmock-matchers-arithmetic_test.cc  gmock-matchers-comparisons_test.cc  gmock-matchers-containers_test.cc  gmock-matchers-misc_test.cc  gmock-pp_test.cc  gmock-spec-builders_test.cc  gmock_link_test.h  gmock_output_test.py  gmock_test_utils.py
lab_4/googletest/googletest/cmake/: internal_utils.cmake
lab_4/googletest/googletest/include/gtest/: gtest-assertion-result.h  gtest-param-test.h  gtest-printers.h  gtest-typed-test.h  gtest.h
lab_4/googletest/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-internal.h  gtest-param-util.h  gtest-port.h
lab_4/googletest/googletest/samples/: sample10_unittest.cc  sample6_unittest.cc
lab_4/googletest/googletest/src/: gtest-internal-inl.h  gtest.cc
lab_4/googletest/googletest/test/: googletest-death-test-test.cc  googletest-fail-if-no-test-linked-test-with-disabled-test_.cc  googletest-fail-if-no-test-linked-test-with-enabled-test_.cc  googletest-fail-if-no-test-linked-test.py  googletest-filter-unittest.py  googletest-json-output-unittest.py  googletest-list-tests-unittest_.cc  googletest-param-test-test.cc  googletest-param-test2-test.cc  googletest-printers-test.cc  gtest_premature_exit_test.cc  gtest_unittest.cc  gtest_xml_outfiles_test.py  gtest_xml_output_unittest.py  gtest_xml_output_unittest_.cc
lab_4/include/: FigureArray.h  figures.h
lab_4/tests/: test.cpp
lab_5/: CMakeLists.txt  main.cpp
lab_5/include/: allocator.h  list.h  list.inl
lab_5/src/: allocator.cpp
lab_5/tests/: tests.cpp
lab_6/: CMakeLists.txt
lab_6/include/: observer.hpp
lab_7/: CMakeLists.txt  log.txt
